--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>100tifico</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main class="Main">
-      <header class="Header" id="header">
-        <section id="content">
-          <div class="loading"></div>
-        </section>
-      </header>
+      <header class="Header" id="header"></header>
+      <section id="content">
+        <div class="loading"></div>
+      </section>
     </main>
   </body>
 </html>
